--- a/app.json
+++ b/app.json
@@ -7,9 +7,9 @@
         "telegram bot",
         "banall"
     ],
-    "website": "https://t.me/ll_ALPHA_BABY_lll",
-    "repository": "https://github.com/TEAMPURVI/STRING_HACK",
-    "success_url": "https://t.me/ll_ALPHA_BABY_lll",
+    "website": "https://t.me/aboutkanha",
+    "repository": "https://github.com/ayushprincekmr03-boop/STRING_HACK.git",
+    "success_url": "https://t.me/aboutkanha",
     "env": {
         "API_ID": {
             "description": "your API_ID ",
