--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-    "name": "𝗔𝗟𝗣𝗛𝗔 𝗛𝗔𝗖𝗞 𝗕𝗢𝗧",
-    "description": "𝗧𝗛𝗜𝗦 𝗕𝗢𝗧 𝗠𝗔𝗞𝗘 𝗕𝗬 𝗧𝗘𝗔𝗠 𝗣𝗨𝗥𝗩𝗜 𝗕𝗢𝗧𝗦",
+    "name": "𝐊𝐀𝐍𝐇𝐀 𝐇𝐀𝐂𝐊 𝐁𝐎𝐓",
+    "description": "𝐓𝐇𝐈𝐒 𝐁𝐎𝐓 𝐌𝐀𝐊𝐄 𝐁𝐘 𝐓𝐄𝐀𝐌 𝐊𝐀𝐍𝐇𝐀 𝐁𝐎𝐓𝐒",
     "logo": "",
     "keywords": [
         "pytgcalls",
